# nwam-manager

./: .cvsignore  AUTHORS  COPYING  ChangeLog  Makefile.am  README  SUNWnwam-manager.spec  TODO.txt  autogen.sh  configure.in  nwam-manager.spec
capplet/: .cvsignore  Makefile.am  capplet-utils.c  capplet-utils.h  main.c  nwam-manager-properties.glade  nwam-manager-properties.ui  nwam_condition_vbox.c  nwam_condition_vbox.h  nwam_conn_conf_ip_panel.c  nwam_conn_conf_ip_panel.h  nwam_conn_stat_panel.c  nwam_conn_stat_panel.h  nwam_env_pref_dialog.c  nwam_env_pref_dialog.h  nwam_env_svc.c  nwam_env_svc.h  nwam_location_dialog.c  nwam_location_dialog.h  nwam_net_conf_panel.c  nwam_net_conf_panel.h  nwam_object_ctrl_iface.c  nwam_object_ctrl_iface.h  nwam_pref_dialog.c  nwam_pref_dialog.h  nwam_pref_iface.c  nwam_pref_iface.h  nwam_profile_dialog.c  nwam_profile_dialog.h  nwam_profile_panel.c  nwam_profile_panel.h  nwam_proxy_password_dialog.c  nwam_proxy_password_dialog.h  nwam_rules_dialog.c  nwam_rules_dialog.h  nwam_tree_view.c  nwam_tree_view.h  nwam_vpn_pref_dialog.c  nwam_vpn_pref_dialog.h  nwam_wireless_chooser.c  (+3 more)
common/: Makefile.am  help_refs.h  libdladm.h  libnwamui.c  libnwamui.h  nwam-menu-action-group.c  nwam-menu-action-group.h  nwam-menu-group.c  nwam-menu-group.h  nwam-menu-radio-action-group.c  nwam-menu-radio-action-group.h  nwam-obj-proxy-iface.c  nwam-scf.c  nwam-scf.h  nwam_pref_iface.c  nwam_pref_iface.h  nwam_ui_icons.c  nwam_ui_icons.h  nwamui_cond.c  nwamui_cond.h  nwamui_daemon.c  nwamui_daemon.h  nwamui_enm.c  nwamui_enm.h  nwamui_env.c  nwamui_env.h  nwamui_ip.c  nwamui_ip.h  nwamui_known_wlan.c  nwamui_known_wlan.h  nwamui_ncp.c  nwamui_ncp.h  nwamui_ncu.c  nwamui_ncu.h  nwamui_object.c  nwamui_object.h  nwamui_prof.c  nwamui_prof.h  nwamui_svc.c  nwamui_svc.h  (+2 more)
daemon/: .cvsignore  Makefile.am  main.c  notify.c  notify.h  nwam-action.c  nwam-action.h  nwam-enm-action.c  nwam-enm-action.h  nwam-enm-group.c  nwam-enm-group.h  nwam-enm-item.c  nwam-enm-item.h  nwam-env-action.c  nwam-env-action.h  nwam-env-group.c  nwam-env-group.h  nwam-env-item.c  nwam-env-item.h  nwam-manager-daemon.glade  nwam-manager.desktop.in  nwam-manager.schemas.in  nwam-menu-action-group.c  nwam-menu-action-group.h  nwam-menu-group.c  nwam-menu-group.h  nwam-menu-radio-action-group.c  nwam-menu.c  nwam-menu.h  nwam-menuitem.c  nwam-menuitem.h  nwam-ncu-item.c  nwam-ncu-item.h  nwam-obj-proxy-iface.c  nwam-obj-proxy-iface.h  nwam-tooltip-widget.c  nwam-tooltip-widget.h  nwam-ui-picea.xml  nwam-ui.xml  nwam-wifi-action.c  (+9 more)
data/: Makefile.am  nwam-manager-properties  nwam-manager-properties.desktop.in  nwam-manager.desktop.in.in  nwam-manager.schemas.in  nwam-network.desktop.in  nwam-network.desktop.in.in
docs/manpages/man1m/: nwam-manager-properties.1m  nwam-manager.1m
docs/ui-spec/: ChangeLog  README  storyboards.odt  ui-spec.odt
docs/ui-spec/img/capplet/: panelmenu.eps
help/: Makefile.am  legal.xml  nwam-manager.omf.in  nwam-manager.xml
help/C/: nwam-manager.xml
help/de/: de.po
help/es/: es.po
help/fr/: fr.po
help/it/: it.po
help/ja/: ja.po
help/ko/: ko.po
help/pt_BR/: pt_BR.po
help/zh_CN/: zh_CN.po
help/zh_HK/: zh_HK.po
nbproject/: Makefile-capplet.mk  Makefile-daemon.mk  Makefile-impl.mk  configurations.xml  project.xml
nbproject/private/: configurations.xml
nwam_core/: copy_onnv_headers.sh  run_nwam.sh
nwam_core/example_configurations/alan1/: ncp-automatic.conf
nwam_core/lib/i386/: libnwam.so.1
nwam_core/lib/sparc/: libnwam.so.1
nwam_core/usr/include/: inetcfg.h  libnwam.h
nwam_core/usr/lib/: libinetcfg.so.1  libnwam.so.1
nwam_core/usr/sbin/: nwamadm  nwamcfg
pixmaps/: Makefile.am
pixmaps/16x16/: Makefile.am
pixmaps/16x16/status/: Makefile.am
pixmaps/24x24/apps/: Makefile.am
pixmaps/24x24/emblems/: Makefile.am
pixmaps/24x24/status/: Makefile.am
pixmaps/32x32/: Makefile.am
pixmaps/32x32/apps/: Makefile.am
pixmaps/32x32/emblems/: Makefile.am
pixmaps/32x32/status/: Makefile.am
pixmaps/48x48/apps/: Makefile.am
pixmaps/48x48/status/: Makefile.am
po/: .cvsignore  ChangeLog  LINGUAS  Makefile.in.in  POTFILES.in  ar.po  cs.po  de.po  es.po  fr.po  hu.po  it.po  ja.po  ko.po  nl.po  pl.po  pt_BR.po  ru.po  zh_CN.po  zh_HK.po  zh_TW.po
scripts/: extract_help_tags.pl  link_icons.sh
tests/: Makefile.am  main.c
ui/: Makefile.am  nwam-manager-properties.ui  nwam-manager-wireless.ui
