include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = nwam-manager
DOC_ENTITIES =
DOC_INCLUDES =
DOC_FIGURES = \
	graphics/panel-wireless-connect.png \
	graphics/nwprofile-auto.png \
	graphics/system-location.png \
	graphics/connection-properties-wireless.png \
	graphics/connection-properties-ipv4.png \
	graphics/nwstatus-context-menu.png \
	graphics/panel-all-disconnect.png \
	graphics/panel-wired-connect.png \
	graphics/network-profile-view.png \
	graphics/vpn-dialog.png \
	graphics/condition-location.png \
	graphics/connection-status.png \
	graphics/manual-location.png \
	graphics/locationprefs-dialog.png \
	graphics/wireless-chooser-dlg.png \
	graphics/panel-some-disconnect.png

DOC_LINGUAS = 

