# CDDL HEADER START
# 
# The contents of this file are subject to the terms of the
# Common Development and Distribution License (the "License").
# You may not use this file except in compliance with the License.
# 
# You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
# or http://www.opensolaris.org/os/licensing.
# See the License for the specific language governing permissions
# and limitations under the License.
# 
# When distributing Covered Code, include this CDDL HEADER in each
# file and include the License file at usr/src/OPENSOLARIS.LICENSE.
# If applicable, add the following below this CDDL HEADER, with the
# fields enclosed by brackets "[]" replaced with your own identifying
# information: Portions Copyright [yyyy] [name of copyright owner]
# 
# CDDL HEADER END
#

icondir = $(datadir)/icons/hicolor/16x16/status

icon_DATA =  \
	network-secure.png \
	network-wired-connected.png \
	network-wired-error.png \
	network-wired-warning.png \
	network-wireless-connected.png \
	network-wireless-error.png \
	network-wireless-signal-fair.png \
	network-wireless-signal-good.png \
	network-wireless-signal-none.png \
	network-wireless-signal-poor.png \
	network-wireless-warning.png	\
	activation-mode-conditional.png	\
	activation-mode-manual.png	\
	activation-mode-system.png	\
	priority-group-1.png	\
	priority-group-2.png	\
	priority-group-3.png

EXTRA_DIST = $(icon_DATA)
