# CDDL HEADER START
# 
# The contents of this file are subject to the terms of the
# Common Development and Distribution License (the "License").
# You may not use this file except in compliance with the License.
# 
# You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
# or http://www.opensolaris.org/os/licensing.
# See the License for the specific language governing permissions
# and limitations under the License.
# 
# When distributing Covered Code, include this CDDL HEADER in each
# file and include the License file at usr/src/OPENSOLARIS.LICENSE.
# If applicable, add the following below this CDDL HEADER, with the
# fields enclosed by brackets "[]" replaced with your own identifying
# information: Portions Copyright [yyyy] [name of copyright owner]
# 
# CDDL HEADER END
#

icondir = $(datadir)/icons/hicolor/24x24/status

icon_DATA =  \
			network-location-connected.png \
			network-location-error.png \
			network-location-warning.png \
			network-secure.png \
			network-wired-connected.png \
			network-wired-error.png \
			network-wired-warning.png \
			network-wireless-connected.png \
			network-wireless-error.png \
			network-wireless-warning.png

EXTRA_DIST = $(icon_DATA)
