# CDDL HEADER START
# 
# The contents of this file are subject to the terms of the
# Common Development and Distribution License (the "License").
# You may not use this file except in compliance with the License.
# 
# You can obtain a copy of the license at usr/src/OPENSOLARIS.LICENSE
# or http://www.opensolaris.org/os/licensing.
# See the License for the specific language governing permissions
# and limitations under the License.
# 
# When distributing Covered Code, include this CDDL HEADER in each
# file and include the License file at usr/src/OPENSOLARIS.LICENSE.
# If applicable, add the following below this CDDL HEADER, with the
# fields enclosed by brackets "[]" replaced with your own identifying
# information: Portions Copyright [yyyy] [name of copyright owner]
# 
# CDDL HEADER END
#

icondir = $(datadir)/icons/hicolor/32x32/status

icon_DATA =  \
	nwam-wireless-0-24.png	\
	nwam-wireless-25-49.png	\
	nwam-wireless-50-74.png	\
	nwam-wireless-75-100.png	\
	nwam-wireless-nosignal.png	\
	nwam-activation-conditional.png	\
	nwam-activation-manual.png	\
	nwam-activation-system.png	\
	priority-group-1.png	\
	priority-group-2.png	\
	priority-group-3.png


EXTRA_DIST = $(icon_DATA)
